--- a/Taro/public/site.css
+++ b/Taro/public/site.css
@@ -1,5 +1,17 @@
 #header{
 background-color: rgb(45, 204, 5);
 height: 500px;
-width: 400px;
+width: 100%;
+margin-top: 3em;
+}
+#aboutme, #contacts,#masterclass, #product, #delivery, #basket{
+    margin-top: 1em;
+    margin-left: 3em;
+    color:black;
+}
+#logo{
+margin-left:3em;
+margin-top:1em;
+width: 8em;
+height:8em;
 }
