--- a/toys.hook/public/site.css
+++ b/toys.hook/public/site.css
@@ -1,17 +1,68 @@
-#header{
+#about-me-block{
 background-color: rgb(45, 204, 5);
 height: 500px;
 width: 100%;
-margin-top: 3em;
+margin-top: 2em;
+}
+#gridHead{
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+grid-gap: 2vw;
+margin-top: 1em;
+margin-left: 3em;
 }
 #aboutme, #contacts,#masterclass, #product, #delivery, #basket{
-    margin-top: 1em;
-    margin-left: 3em;
-    color:black;
+color:black;
+/* margin-top:1.5em; */
+height:100%;
 }
-#logo{
-margin-left:3em;
-margin-top:1em;
+ #logo{
 width: 8em;
 height:8em;
+}
+
+#product-block{
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr;
+grid-gap: 2vw;
+margin-top: 1.5em;
+text-align: center;
+}
+.ms-3 {
+    margin-left: 3em;
+  }
+#delivery-block{
+    background-color: rgb(214, 236, 17);
+    height: 500px;
+    width: 100%;
+    margin-top: 2em;
+    }
+#masterclass-block{
+    background-color: rgb(252, 252, 252);
+    height: 500px;
+    width: 100%;
+    margin-top: 2em;
+    }
+#footer{
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    margin-bottom: 1.5em;
+}
+#footer-logo{
+    width: 4em;
+    height:4em;
+    margin-left: 2em;
+}
+#line{
+    padding-left: 2em;
+    width:100%;
+    height: 100%;
+}
+#icon{
+width: 3em;
+height: 3em;
+}
+#source{
+    padding-top:1em;
 }
