--- a/toys.hook/views/partials/head.hbs
+++ b/toys.hook/views/partials/head.hbs
@@ -5,5 +5,5 @@
     <div><img src="toyshook.jpg" alt="типа логотип" id="logo"></div>
     <div><button type="button" id="contacts" class="btn btn-link">Контакты</button></div>
     <div><button type="button" id="delivery" class="btn btn-link">Как заказать</button></div>
-    <div><button type="button" id="basket" class="btn btn-link">Корзина</button></div>
+    <div><button type="button" id="wishlist" class="btn btn-link">Список желаний</button></div>
 </div>
