--- a/toys.hook/views/partials/mc.hbs
+++ b/toys.hook/views/partials/mc.hbs
@@ -1,1 +1,7 @@
-<div id="masterclass-block"></div>
+<div id="masterclass-block">
+    <div class="text">
+        <h1>Упс!</h1>
+        <p>Пока нет ни одного мастер-класса</p>
+    </div>
+    <div><img src="mc.png" alt="мастер-классы" id="mc"></div>
+</div>
