поменяла дизайн, поделила большой файл стилей на множество маленьких

--- a/toys.hook/views/partials/head.hbs
+++ b/toys.hook/views/partials/head.hbs
@@ -1,9 +1,11 @@
-<div id="gridHead">
-    <div><button type="button" id="aboutme" class="btn btn-link">Обо мне</button></div>
-    <div><button type="button" id="product" class="btn btn-link">Игрушки</button></div>
-    <div> <button type="button" id="masterclass" class="btn btn-link">Мастер-класс</button></div>
-    <div><img src="toyshook.jpg" alt="типа логотип" id="logo"></div>
-    <div><button type="button" id="contacts" class="btn btn-link">Контакты</button></div>
-    <div><button type="button" id="delivery" class="btn btn-link">Как заказать</button></div>
-    <div><button type="button" id="wishlist" class="btn btn-link">Список желаний</button></div>
+<div id="outGrid">
+    <div id="gridHead">
+        <div><button type="button" id="aboutme" class="btn btn-link">обо мне</button></div>
+        <div><button type="button" id="product" class="btn btn-link">игрушки</button></div>
+        <div> <button type="button" id="masterclass" class="btn btn-link">мастер-класс</button></div>
+        <div><img src="toyshook.jpg" alt="типа логотип" id="logo"></div>
+        <div><button type="button" id="contacts" class="btn btn-link">контакты</button></div>
+        <div><button type="button" id="delivery" class="btn btn-link">доставка</button></div>
+        <div><button type="button" id="wishlist" class="btn btn-link">корзина</button></div>
+    </div>
 </div>
