--- a/toys.hook/views/index.hbs
+++ b/toys.hook/views/index.hbs
@@ -9,17 +9,23 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="site.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" type="text/css" href="aboutme.css">
+    <link rel="stylesheet" type="text/css" href="head.css">
+    <link rel="stylesheet" type="text/css" href="product.css">
+    <link rel="stylesheet" type="text/css" href="delivery.css">
+    <link rel="stylesheet" type="text/css" href="masterclass.css">
+    <link rel="stylesheet" type="text/css" href="footer.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
 
 <body>
     {{> head}}
     {{> aboutme}}
     {{> products}}
     {{> delivery}}
-    {{> mc}}
+    {{> mc }}
     <div> <img src="line.png" alt="линия" id="line"></div>
     {{> footer}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
