--- a/toys.hook/views/partials/aboutme.hbs
+++ b/toys.hook/views/partials/aboutme.hbs
@@ -1,1 +1,8 @@
-<div id="about-me-block"></div>
+<div id="about-me-block">
+    <div class="inform">
+        <h1>Обо мне</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab earum, quo qui pariatur amet et ad rerum facere ratione eos labore tenetur dolor voluptatum commodi reiciendis enim eaque corporis! Fugiat?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab earum, quo qui pariatur amet et ad rerum facere ratione eos labore tenetur dolor voluptatum commodi reiciendis enim eaque corporis! Fugiat?</p>
+    </div>
+    <div><img src="aboutme.jpg" alt="фотография" id="photo"></div>
+</div>
