--- a/toys.hook/views/partials/delivery.hbs
+++ b/toys.hook/views/partials/delivery.hbs
@@ -1,1 +1,32 @@
-<div id="delivery-block"></div>
+<div id="delivery-block">
+    <div id="delivery">
+        <div><img src="taxi.png" alt="фотография" id="taxi"></div>
+        <div><img src="postbox.png" alt="фотография" id="postbox"></div>
+        <div><img src="shop.png" alt="фотография" id="shop"></div>
+        <div>
+            <h1>Такси</h1>
+        </div>
+        <div>
+            <h1>Почта</h1>
+        </div>
+        <div>
+            <h1>Самовывоз</h1>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
+                cumque magni!</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
+                cumque magni!</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
+                cumque magni!</p>
+        </div>
+
+    </div>
+</div>
