--- a/toys.hook/views/partials/delivery.hbs
+++ b/toys.hook/views/partials/delivery.hbs
@@ -1,32 +1,27 @@
 <div id="delivery-block">
-    <div id="delivery">
-        <div><img src="taxi.png" alt="фотография" id="taxi"></div>
-        <div><img src="postbox.png" alt="фотография" id="postbox"></div>
-        <div><img src="shop.png" alt="фотография" id="shop"></div>
-        <div>
-            <h1>Такси</h1>
-        </div>
-        <div>
-            <h1>Почта</h1>
-        </div>
-        <div>
-            <h1>Самовывоз</h1>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
-                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
-                cumque magni!</p>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
-                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
-                cumque magni!</p>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
-                reprehenderit, fugiat tenetur eum beatae placeat? Sit iure maxime ut nulla quaerat, velit perspiciatis
-                cumque magni!</p>
-        </div>
-
+    <div id="delivery" class="position"><img src="taxi.png" alt="фотография" id="taxiimg"></div>
+    <div class="position"><img src="postbox.png" alt="фотография" id="postboximg"></div>
+    <div class="position"><img src="shop.png" alt="фотография" id="shopimg"></div>
+    <div id="taxi" class="text-position font">
+        <h2>На такси</h2>
     </div>
+    <div class="text-position font">
+        <h2>Почтой</h2>
+    </div>
+    <div class="text-position font">
+        <h2>Самовывозом</h2>
+    </div>
+    <div id="description-taxi" class="description-font">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+            reprehenderit.</p>
+    </div>
+    <div class="description-font">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+            reprehenderit.</p>
+    </div>
+    <div class="description-font">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis velit omnis illo quidem
+            reprehenderit.</p>
+    </div>
+
 </div>
