--- a/toys.hook/views/partials/products.hbs
+++ b/toys.hook/views/partials/products.hbs
@@ -1,55 +1,40 @@
-<div id="product-block" class="ms-3">
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
-        </div>
+<div id="product-block">
+    <div id="filter">
+        <input type="text" class="form-control" id="search">
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="sort">
+            <option selected>Сортировать</option>
+            <option value="1">По убыванию цены</option>
+            <option value="2">По возрастанию цены</option>
+            <option value="3">По убыванию размера</option>
+            <option value="3">По возрастанию размера</option>
+        </select>
     </div>
-
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
+    <div id="product-list">
+        <div id="toy" class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
         </div>
-    </div>
 
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
         </div>
-    </div>
 
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
-        </div>
-    </div>
-
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
-        </div>
-    </div>
-
-    <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Типа игрушка</h5>
-            <p class="card-text">Какое-то описание</p>
-            <a href="#">Купить</a>
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
         </div>
     </div>
 </div>
