--- a/toys.hook/public/footer.css
+++ b/toys.hook/public/footer.css
@@ -1,23 +1,25 @@
 #footer{
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr;
+    grid-template-columns: 4fr 3fr;
     margin-bottom: 1.5em;
     font-family: 'Cormorant Garamond', serif;
-}
-#footer-logo{
-    width: 4em;
-    height:4em;
-    margin-left: 2em;
+    padding-left:2em;
+    padding-top:1em;
 }
 #line{
     padding-left: 2em;
     width:100%;
     height: 100%;
 }
-#icon{
-width: 3em;
-height: 3em;
+.icon{
+width: 2em;
+height: 2em;
 }
-#source{
-    padding-top:1em;
+#contact{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+#first-co{
+    grid-column-start: 2;
+}
+
