--- a/toys.hook/views/index.hbs
+++ b/toys.hook/views/index.hbs
@@ -29,6 +29,7 @@
     <div> <img src="line.png" alt="линия" id="line"></div>
     {{> footer}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
