--- a/toys.hook/views/partials/footer.hbs
+++ b/toys.hook/views/partials/footer.hbs
@@ -1,6 +1,8 @@
 <div id="footer">
-    <div><img src="toyshook.jpg" alt="типа логотип" id="footer-logo"> Toys.Hook. Игрушки, связанные с любовью</div>
-    <div id="source"><img src="https://img.icons8.com/small/32/000000/instagram-new.png"></div>
-    <div id="source"><img src="https://img.icons8.com/small/32/000000/vk-com.png"></div>
-    <div id="source"><img src="https://img.icons8.com/small/32/000000/marker.png">г. Самара</div>
+    <div> © All Right Reserved. Toys.Hook. Игрушки, связанные с любовью</div>
+    <div id="contact">
+    <div id="first-co" class="source"><img src="instagram.png" alt="фотография" class="icon" id="inst"></div>
+    <div class="source"><img src="vk.png" alt="фотография" class="icon" id="vk"></div>
+    <div class="source"><img src="marker.png" alt="фотография" class="icon">г. Самара</div>
+</div>
 </div>
