--- a/toys.hook/public/css/head.css
+++ b/toys.hook/public/css/head.css
@@ -16,6 +16,7 @@
     font-family: 'Cormorant Garamond', serif;
     height:100%;
     font-size:20px;
+    text-decoration: none;
     }
     
      #logo{
