--- a/toys.hook/views/partials/aboutme.hbs
+++ b/toys.hook/views/partials/aboutme.hbs
@@ -4,5 +4,5 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab earum, quo qui pariatur amet et ad rerum facere ratione eos labore tenetur dolor voluptatum commodi reiciendis enim eaque corporis! Fugiat?</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab earum, quo qui pariatur amet et ad rerum facere ratione eos labore tenetur dolor voluptatum commodi reiciendis enim eaque corporis! Fugiat?</p>
     </div>
-    <div><img src="aboutme.jpg" alt="фотография" id="photo"></div>
+    <div><img src="image/aboutme.jpg" alt="фотография" id="photo"></div>
 </div>
