--- a/toys.hook/views/partials/delivery.hbs
+++ b/toys.hook/views/partials/delivery.hbs
@@ -1,7 +1,7 @@
 <div id="delivery-block">
-    <div id="delivery" class="position"><img src="taxi.png" alt="фотография" id="taxiimg"></div>
-    <div class="position"><img src="postbox.png" alt="фотография" id="postboximg"></div>
-    <div class="position"><img src="shop.png" alt="фотография" id="shopimg"></div>
+    <div id="delivery" class="position"><img src="image/taxi.png" alt="фотография" id="taxiimg"></div>
+    <div class="position"><img src="image/postbox.png" alt="фотография" id="postboximg"></div>
+    <div class="position"><img src="image/shop.png" alt="фотография" id="shopimg"></div>
     <div id="taxi" class="text-position font">
         <h2>На такси</h2>
     </div>
