--- a/toys.hook/views/partials/footer.hbs
+++ b/toys.hook/views/partials/footer.hbs
@@ -1,8 +1,8 @@
 <div id="footer">
     <div> © All Right Reserved. Toys.Hook. Игрушки, связанные с любовью</div>
     <div id="contact">
-    <div id="first-co" class="source"><img src="instagram.png" alt="фотография" class="icon" id="inst"></div>
-    <div class="source"><img src="vk.png" alt="фотография" class="icon" id="vk"></div>
-    <div class="source"><img src="marker.png" alt="фотография" class="icon">г. Самара</div>
+    <div id="first-co" class="source"><img src="image/instagram.png" alt="фотография" class="icon" id="inst"></div>
+    <div class="source"><img src="image/vk.png" alt="фотография" class="icon" id="vk"></div>
+    <div class="source"><img src="image/marker.png" alt="фотография" class="icon">г. Самара</div>
 </div>
 </div>
