--- a/toys.hook/views/partials/head.hbs
+++ b/toys.hook/views/partials/head.hbs
@@ -3,7 +3,7 @@
         <div><button type="button" id="aboutme" class="btn btn-link">обо мне</button></div>
         <div><button type="button" id="product" class="btn btn-link">игрушки</button></div>
         <div> <button type="button" id="masterclass" class="btn btn-link">мастер-класс</button></div>
-        <div><img src="toyshook.jpg" alt="типа логотип" id="logo"></div>
+        <div><img src="image/toyshook.jpg" alt="типа логотип" id="logo"></div>
         <div><button type="button" id="contacts" class="btn btn-link">контакты</button></div>
         <div><button type="button" id="delivery" class="btn btn-link">доставка</button></div>
         <div><button type="button" id="wishlist" class="btn btn-link">корзина</button></div>
