--- a/toys.hook/views/partials/mc.hbs
+++ b/toys.hook/views/partials/mc.hbs
@@ -3,5 +3,5 @@
         <h1>Упс!</h1>
         <p1>Пока нет ни одного мастер-класса</p1>
     </div>
-    <div><img src="mc.png" alt="мастер-классы" id="mc"></div>
+    <div><img src="image/mc.png" alt="мастер-классы" id="mc"></div>
 </div>
