--- a/toys.hook/views/index.hbs
+++ b/toys.hook/views/index.hbs
@@ -7,30 +7,23 @@
         Toys.Hook. Игрушки ручной работы
     </title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="site.css">
-    <link rel="stylesheet" type="text/css" href="aboutme.css">
-    <link rel="stylesheet" type="text/css" href="head.css">
-    <link rel="stylesheet" type="text/css" href="product.css">
-    <link rel="stylesheet" type="text/css" href="delivery.css">
-    <link rel="stylesheet" type="text/css" href="masterclass.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
+    {{#each styleFiles}}
+        <link rel="stylesheet" type="text/css" href="css/{{this}}">
+    {{/each}}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-</head>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
-
+</head>
 <body>
     {{> head}}
     {{> aboutme}}
     {{> products}}
     {{> delivery}}
     {{> mc }}
-    <div> <img src="line.png" alt="линия" id="line"></div>
+    <div> <img src="image/line.png" alt="линия" id="line"></div>
     {{> footer}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
