--- a/toys.hook/public/css/product.css
+++ b/toys.hook/public/css/product.css
@@ -22,6 +22,8 @@
     border-right: 2px solid rgb(48, 48, 48);
     margin-left: 2em;
     text-align: left;
+    font-size: 17px;
+
 }
 #search{
     margin-top: 1.5em;
@@ -46,7 +48,7 @@
 }
 #interval{
     display:grid;
-    grid-template-columns:1fr .4fr 1fr 1fr;
+    grid-template-columns:1fr .4fr 1fr .7fr;
     margin-top: .3em;
     grid-gap: .5vw;
 }
@@ -55,5 +57,8 @@
     height: 1.5em;
 }
 #size{
-     margin-top: 1.5em;
+     margin-top: 1em;
+}
+.form-select-sm{
+    font-size: medium;
 }
