добавила vue, полностью сделала фильтр

--- a/toys.hook/public/css/product.css
+++ b/toys.hook/public/css/product.css
@@ -56,8 +56,12 @@
     width:100%;
     height: 1.5em;
 }
-#size{
+.top{
      margin-top: 1em;
+}
+.center{
+    margin-top: 2em;
+    margin-left:1.5em;
 }
 .form-select-sm{
     font-size: medium;
