--- a/toys.hook/views/index.hbs
+++ b/toys.hook/views/index.hbs
@@ -16,14 +16,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="app">
     {{> head}}
     {{> aboutme}}
     {{> products}}
     {{> delivery}}
     {{> mc }}
+    </div>
     <div> <img src="image/line.png" alt="линия" id="line"></div>
     {{> footer}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
