--- a/toys.hook/views/partials/head.hbs
+++ b/toys.hook/views/partials/head.hbs
@@ -1,11 +1,11 @@
 <div id="outGrid">
     <div id="gridHead">
-        <div><a href="#about-me-block"><button id="aboutme" class="btn btn-link">обо мне</button></a></div>
-        <div><a href="#product-block"><button type="button" id="product" class="btn btn-link">игрушки</button></a></div>
-        <div><a href="#masterclass-block"> <button type="button" id="masterclass" class="btn btn-link">мастер-класс</button></a></div>
+        <div><a href="#about-me-block"><button id="aboutme" class="outline-none">обо мне</button></a></div>
+        <div><a href="#product-block"><button type="button" id="product" class="outline-none">игрушки</button></a></div>
+        <div><a href="#masterclass-block"> <button type="button" id="masterclass" class="outline-none">мастер-класс</button></a></div>
         <div><img src="image/toyshook.jpg" alt="типа логотип" id="logo"></div>
-        <div><a href="#footer"><button type="button" id="contacts" class="btn btn-link">контакты</button></a></div>
-        <div><a href="#delivery-block"><button type="button" id="delivery" class="btn btn-link">доставка</button></a></div>
-        <div><button type="button" id="wishlist" class="btn btn-link">корзина</button></div>
+        <div><a href="#footer"><button type="button" id="contacts" class="outline-none">контакты</button></a></div>
+        <div><a href="#delivery-block"><button type="button" id="delivery" class="outline-none">доставка</button></a></div>
+        <div><button type="button" id="wishlist" class="outline-none" @click="wishlist.modal.show()">корзина</button></div>
     </div>
 </div>
