--- a/toys.hook/views/partials/head.hbs
+++ b/toys.hook/views/partials/head.hbs
@@ -6,6 +6,6 @@
         <div><img src="image/toyshook.jpg" alt="типа логотип" id="logo"></div>
         <div><a href="#footer"><button type="button" id="contacts" class="outline-none">контакты</button></a></div>
         <div><a href="#delivery-block"><button type="button" id="delivery" class="outline-none">доставка</button></a></div>
-        <div><button type="button" id="wishlist" class="outline-none" @click="wishlist.modal.show()">корзина</button></div>
+        <div><button type="button" id="wishlist" class="outline-none" @click="show = !show">корзина</button></div>
     </div>
 </div>
