--- a/toys.hook/views/partials/products.hbs
+++ b/toys.hook/views/partials/products.hbs
@@ -22,7 +22,7 @@
                 <option>шерсть</option>
                 <option>хлопок</option>
             </select>
-            <button type="button" class="btn btn-light center">Сбросить параметры</button>
+            <button type="button" class="btn btn-light center" @click="resetFilter()">Сбросить параметры</button>
         </div>
     </div>
     <div id="product-list">
